
PIG-3549: Print hadoop jobids for failed, killed job (aniket486)

PIG-3047: Check the size of a relation before adding it to distributed cache in Replicated join (aniket486)

PIG-3480: TFile-based tmpfile compression crashes in some cases (dvryaboy via aniket486)

PIG-3573: Provide StoreFunc and LoadFunc for Accumulo (elserj via daijy)

BUG FIXES

PIG-4215: Fix unit test failure TestParamSubPreproc and TestMacroExpansion (daijy)

PIG-3765: Ability to disable Pig commands and operators - minor refactor (aniket486)

PIG-3806: PigServer constructor throws NPE after PIG-3765 (aniket486)

PIG-3661: Piggybank AvroStorage fails if used in more than one load or store statement (rohini via cheolsoo)

PIG-3819: e2e tests containing "perl -e "print $_;" fails on Hadoop 2 (daijy)

PIG-3813: Rank column is assigned different uids everytime when schema is reset (cheolsoo)

PIG-3833: Relation loaded by AvroStorage with schema is projected incorrectly in foreach statement (jeongjinku via cheolsoo)

PIG-3794: pig -useHCatalog fails using pig command line interface on HDInsight (ehans via daijy)

PIG-3827: Custom partitioner is not picked up with secondary sort optimization (daijy)

PIG-3826: Outer join with PushDownForEachFlatten generates wrong result (daijy)

PIG-3820: TestAvroStorage fail on some OS (daijy)

PIG-3818: PIG-2499 is accidently reverted (daijy)

PIG-3516: pig does not bring in joda-time as dependency in its pig-template.xml (daijy)

PIG-3753: LOGenerate generates null schema (daijy)

PIG-3782: PushDownForEachFlatten + ColumnMapKeyPrune with user defined schema failing due to incorrect UID assignment (knoguchi via daijy)

PIG-3779: Assert constructs ConstantExpression with null when no comment is given (thedatachef via cheolsoo)

PIG-3777: Pig 12.0 Documentation (karinahauser via daijy)

PIG-3774: Piggybank Over UDF get wrong result (daijy)

PIG-3657: New partition filter extractor fails with NPE (cheolsoo)

PIG-3347: Store invocation brings side effect (daijy)
